# nle-server

./: .gitignore  CMakeLists.txt  NLE_Server_Implementation_Plan.md  README.md  buzzing-twirling-scroll.md  eslint.config.js  package-lock.json  package.json  vite.config.js  vitest.config.js
scripts/: build_ffmpeg.sh  build_wasm.sh
src/core/: bindings.cpp  frame_server.cpp  frame_server.h  timeline_engine.cpp  timeline_engine.h
src/web/: audio_engine.js  composition_cache.js  disk_cache.js  export.js  export_ui.js  frame_cache.js  frame_server.js  index.html  layout.js  main.js  media_bin.js  playback.js  player.js  project.js  sequence_creator.js  sequence_settings.js  timecode.js  timeline.js  wasm_bridge.js  webcodecs_decoder.js
src/web/__tests__/: playback.test.js  player.test.js  seek_accuracy.test.js  timeline_engine.test.js  wasm_bridge.test.js
src/web/styles/: components.css  main.css
